--- a/tienda-virtual/public/estilos.css
+++ b/tienda-virtual/public/estilos.css
@@ -74,7 +74,93 @@
 .bottom{
     bottom: 0;
 }
+.left{
+    left: 0;
+}
 .bg_image{
     background-image: url(./Images/PizzaPlaneta.jpg);
     background-size: contain;
+}
+.bg_image2{
+    background-image: url(./Images/pizaas.jpeg);
+    background-size: contain;
+}
+
+.wrap{
+    word-wrap: break-word;
+}
+.flex{
+    display: flex;
+}
+.colum{
+    flex-direction: column;
+}
+.w50{
+    width: 50%;
+}
+.w80{
+    width: 80%;
+}
+.wMax{
+    max-width: 60%;
+}
+
+.alignCenter{
+    align-items: center;
+}
+
+.padding{
+    padding: 30px;
+}
+.py{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.py_40{
+    padding-top: 40px;
+    padding-bottom: 40px;
+        
+}
+.heightMax{
+    height: max-content;
+}
+.justifyCenter{
+    justify-content: center;
+}
+.gap{
+    gap: 40px;
+}
+.gap20{
+    gap: 20px;
+}
+
+.gap10{
+    gap: 10px;
+}
+.bg_Transparent{
+    background-color: rgba(240, 248, 255, 0.149);
+}
+
+.bg_black{
+    background-color: rgba(1, 1, 1, 0.311);
+}
+.radius{
+    border-radius: 20px;
+}
+.textCenter{
+    text-align: center;
+}
+.prueba{
+    transition: transform 0.3s ease;
+    width: 250px;
+    height: 250px;
+}
+.lineHeight{
+    line-height: 1.7;
+}
+.scale{
+    scale: 1;
+}
+.scale:hover{
+    transform: scale(1.1);
 }
